Null Pointer Exception line 106 TaskListFragment